--- a/UML/SimpleDrawInitial/nbproject/private/private.properties
+++ b/UML/SimpleDrawInitial/nbproject/private/private.properties
@@ -1,2 +1,2 @@
 compile.on.save=false
-user.properties.file=C:\\Users\\rbastide\\AppData\\Roaming\\NetBeans\\8.0\\build.properties
+user.properties.file=C:\\Users\\arnaud\\AppData\\Roaming\\NetBeans\\7.4\\build.properties
