--- a/Dev/DaFifteenGame/nbproject/private/private.properties
+++ b/Dev/DaFifteenGame/nbproject/private/private.properties
@@ -1,6 +1,8 @@
 compile.on.save=true
 do.depend=false
 do.jar=true
+file.reference.Shape.jar=U:\\M2-IHM\\Dev\\Shape\\dist\\Shape.jar
+file.reference.ShapeLabel.jar=U:\\M2-IHM\\Dev\\ShapeLabel\\dist\\ShapeLabel.jar
 javac.debug=true
 javadoc.preview=true
 user.properties.file=C:\\Users\\ladoucar\\AppData\\Roaming\\NetBeans\\8.0.1\\build.properties
