tp 2 sur interaction geste, ne marche pas

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,3 @@
 /Dev/DaFifteenGame/dist/
+/Modalité Interaction/TP2 - Interaction geste/GestePalette/nbproject/private/
+/Modalité Interaction/TP2 - Interaction geste/GestePalette/build/
