--- a/Modalité Interaction/TP2 - Interaction geste/GestePalette/build.xml
+++ b/Modalité Interaction/TP2 - Interaction geste/GestePalette/build.xml
@@ -7,8 +7,8 @@
 <!-- the Compile on Save feature is turned off for the project. -->
 <!-- You can turn off the Compile on Save (or Deploy on Save) setting -->
 <!-- in the project's Project Properties dialog box.-->
-<project name="DaFifteenGame" default="default" basedir=".">
-    <description>Builds, tests, and runs the project DaFifteenGame.</description>
+<project name="GestePalette" default="default" basedir=".">
+    <description>Builds, tests, and runs the project GestePalette.</description>
     <import file="nbproject/build-impl.xml"/>
     <!--
 
@@ -58,7 +58,7 @@
 
     An example of overriding the target for project execution could look like this:
 
-        <target name="run" depends="DaFifteenGame-impl.jar">
+        <target name="run" depends="GestePalette-impl.jar">
             <exec dir="bin" executable="launcher.exe">
                 <arg file="${dist.jar}"/>
             </exec>
