--- a/Modalité Interaction/TP2 - Interaction geste/GestePalette/nbproject/project.properties
+++ b/Modalité Interaction/TP2 - Interaction geste/GestePalette/nbproject/project.properties
@@ -1,10 +1,9 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
+annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
-application.title=DaFifteenGame
-application.vendor=arnaud
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -25,17 +24,14 @@ debug.test.classpath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/DaFifteenGame.jar
+dist.jar=${dist.dir}/GestePalette.jar
 dist.javadoc.dir=${dist.dir}/javadoc
-endorsed.classpath=
 excludes=
-file.reference.Shape.jar=C:\\Users\\ladoucar\\Documents\\NetBeansProjects\\Shape\\dist\\Shape.jar
-file.reference.ShapeLabel.jar=C:\\Users\\ladoucar\\Documents\\NetBeansProjects\\ShapeLabel\\dist\\ShapeLabel.jar
+file.reference.ivy-java-1.2.17.jar=U:\\tp-Prototypage\\ivy-java\\ivy-java-1.2.17.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.ShapeLabel.jar}:\
-    ${file.reference.Shape.jar}
+    ${file.reference.ivy-java-1.2.17.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -59,7 +55,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=Main
+main.class=gestepalette.Main
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
