Model du marking menu fonctionnel

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,9 @@
 /Dev/DaFifteenGame/dist/
 /Modalité Interaction/TP2 - Interaction geste/GestePalette/nbproject/private/
 /Modalité Interaction/TP2 - Interaction geste/GestePalette/build/
+/Dev/DaFifteenGameV2/nbproject/private/
+/Dev/DaFifteenGame/build/
+/Dev/TestPopUpMenu/nbproject/private/
+/Dev/TestPopUpMenu/build/
+/Dev/MarkingMenu/nbproject/private/
+/Dev/MarkingMenu/build/
