old marking menu

--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,7 @@
 /Dev/DaFifteenGame/dist/
 /Modalité Interaction/TP2 - Interaction geste/GestePalette/nbproject/private/
 /Modalité Interaction/TP2 - Interaction geste/GestePalette/build/
+/Dev/MarkingMenu/dist/
+/Interaction3D/TP1CarreRouge/nbproject/private/
+/Interaction3D/TP1CarreRouge/build/
+/Modalité Interaction/TP2 - Interaction geste/GestePalette/dist/
